--- a/src/app/add-user/add-user.component.html
+++ b/src/app/add-user/add-user.component.html
@@ -19,7 +19,7 @@
                 <input type="password" placeholder="Saisir Mot de passe" [(ngModel)]="newUser.password" name="password" required>
             </div>
             <div class="input-box">
-                <input type="text" placeholder="Saisir la societe" [(ngModel)]="newUser.societe" name="societe" required>
+                <input type="text" placeholder="Saisir la societe" [(ngModel)]="newUser.entreprises" name="societe" required>
             </div>
             <div class="input-box button">
                 <input type="submit" value="Ajouter" style="color:white">
