--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -87,7 +87,7 @@
                         <tr>
                             <td>Societé</td>
                             <td>:</td>
-                            <td>{{currentUser.societe}}</td>
+                            <td>{{currentUser.entreprises}}</td>
                         </tr>
                         <tr>
                             <td>Roles</td>
