--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -14,7 +14,7 @@
         
         <input type="email" placeholder="Email" [(ngModel)]= "newUser.email" name="email">
 
-        <input type="text" placeholder="Societe" [(ngModel)]= "newUser.societe" name="societe">
+        <input type="text" placeholder="Societe" [(ngModel)]= "newUser.entreprises" name="entreprises">
         <!-- <div class="col-sm-4 col-md-4 col-lg-4">
         <label >Roles</label>
         <input type="text" [(ngModel)]= "newUser.roles"
