--- a/src/app/update-user/update-user.component.html
+++ b/src/app/update-user/update-user.component.html
@@ -23,7 +23,7 @@
         </div>
        
         <div class="input-box">
-          <input type="text" [(ngModel)]="currentUser.societe" name="societe" class="form-control">
+          <input type="text" [(ngModel)]="currentUser.entreprises" name="entreprises" class="form-control">
         </div>
       </div>
         <div class="input-box button">
